--- a/icesipalace-frontend/src/styles/App.css
+++ b/icesipalace-frontend/src/styles/App.css
@@ -35,3 +35,11 @@
     transform: rotate(360deg);
   }
 }
+
+.main-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
