--- a/icesipalace-frontend/src/styles/HomePage/Product.css
+++ b/icesipalace-frontend/src/styles/HomePage/Product.css
@@ -1,169 +1,25 @@
 .product {
-	/* Font & Text */
-	font-family: "Segoe UI Historic", "Segoe UI", Helvetica, Arial, sans-serif;
-	font-size: 12px;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: 400;
-	letter-spacing: normal;
-	line-height: 16.08px;
-	text-decoration: none solid rgb(28, 30, 33);
-	text-align: start;
-	text-indent: 0px;
-	text-transform: none;
-	vertical-align: baseline;
-	white-space: normal;
-	word-spacing: 0px;
-
-	/* Color & Background */
-	background-attachment: scroll;
-	background-color: rgba(0, 0, 0, 0);
-	background-image: none;
-	background-position: 0% 0%;
-	background-repeat: repeat;
-	color: rgb(28, 30, 33);
-
-	/* Box */
-	height: 349.719px;
-	width: 247.828px;
-	border: 0px none rgb(28, 30, 33);
-	border-top: 0px none rgb(28, 30, 33);
-	border-right: 0px none rgb(28, 30, 33);
-	border-bottom: 0px none rgb(28, 30, 33);
-	border-left: 0px none rgb(28, 30, 33);
-	margin: 0px;
-	padding: 4px;
-	max-height: none;
-	min-height: auto;
-	max-width: 381px;
-	min-width: 242px;
-
-	/* Positioning */
-	position: static;
-	top: auto;
-	bottom: auto;
-	right: auto;
-	left: auto;
-	float: none;
 	display: flex;
-	clear: none;
-	z-index: auto;
-
-	/* List */
-	list-style-image: none;
-	list-style-type: disc;
-	list-style-position: outside;
-
-	/* Table */
-	border-collapse: separate;
-	border-spacing: 0px 0px;
-	caption-side: top;
-	empty-cells: show;
-	table-layout: auto;
-
-	/* Miscellaneous */
-	overflow: visible;
-	cursor: auto;
-	visibility: visible;
-
-	/* Effects */
-	transform: none;
-	transition: all 0s ease 0s;
-	outline: rgb(255, 0, 0) dashed 1px;
-	outline-offset: 0px;
-	box-sizing: border-box;
-	resize: none;
-	text-shadow: none;
-	text-overflow: clip;
-	word-wrap: normal;
-	box-shadow: none;
-	border-top-left-radius: 0px;
-	border-top-right-radius: 0px;
-	border-bottom-left-radius: 0px;
-	border-bottom-right-radius: 0px;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	width: 200px;
+	height: 250px;
+	margin: 10px;
+	border: 1px solid #ccc;
+	border-radius: 5px;
+	box-shadow: 0 0 10px #ccc;
+	transition: 0.3s;
+	cursor: pointer;
 }
 
-.product-image {
-	/* Font & Text */
-	font-family: "Segoe UI Historic", "Segoe UI", Helvetica, Arial, sans-serif;
-	font-size: 12px;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: 400;
-	letter-spacing: normal;
-	line-height: 16.08px;
-	text-decoration: none solid rgb(28, 30, 33);
-	text-align: start;
-	text-indent: 0px;
-	text-transform: none;
-	vertical-align: baseline;
-	white-space: normal;
-	word-spacing: 0px;
+.product:hover {
+	box-shadow: 0 0 20px #f72b2b;
+}
 
-	/* Color & Background */
-	background-attachment: scroll;
-	background-color: rgba(0, 0, 0, 0);
-	background-image: none;
-	background-position: 0% 0%;
-	background-repeat: repeat;
-	color: rgb(28, 30, 33);
-
-	/* Box */
-	height: 237.828px;
-	width: 237.828px;
-	border: 0px none rgb(28, 30, 33);
-	border-top: 0px none rgb(28, 30, 33);
-	border-right: 0px none rgb(28, 30, 33);
-	border-bottom: 0px none rgb(28, 30, 33);
-	border-left: 0px none rgb(28, 30, 33);
-	margin: 0px;
-	padding: 0px;
-	max-height: none;
-	min-height: auto;
-	max-width: none;
-	min-width: auto;
-
-	/* Positioning */
-	position: static;
-	top: auto;
-	bottom: auto;
-	right: auto;
-	left: auto;
-	float: none;
-	display: block;
-	clear: none;
-	z-index: auto;
-
-	/* List */
-	list-style-image: none;
-	list-style-type: none;
-	list-style-position: outside;
-
-	/* Table */
-	border-collapse: separate;
-	border-spacing: 0px 0px;
-	caption-side: top;
-	empty-cells: show;
-	table-layout: auto;
-
-	/* Miscellaneous */
-	overflow: hidden;
-	cursor: pointer;
-	visibility: visible;
-
-	/* Effects */
-	transform: none;
-	transition: all 0s ease 0s;
-	outline: rgb(255, 0, 0) dashed 1px;
-	outline-offset: 0px;
-	box-sizing: content-box;
-	resize: none;
-	text-shadow: none;
-	text-overflow: clip;
-	word-wrap: normal;
-	box-shadow: none;
-	border-top-left-radius: 0px;
-	border-top-right-radius: 0px;
-	border-bottom-left-radius: 0px;
-	border-bottom-right-radius: 0px;
+.product img {
+	width: 100%;
+	height: 80%;
+	object-fit: cover;
+	background-image: url("https://co.pinterest.com/pin/1092263715862611508/");
 }
