--- a/icesipalace-frontend/src/styles/HomePage/HomePage.css
+++ b/icesipalace-frontend/src/styles/HomePage/HomePage.css
@@ -1,16 +1,17 @@
 .home-page {
     display: flex;
     flex-direction: row;
-    width: 100%;
+    width: 100vh;
     min-height: 100vh;
     height: auto;
+
 }
 
 .nav-bar {
     display: flex;
     flex-direction: column;
     width: 250px;
-    height: auto;
+    min-height: auto;
     background-color: #1a1a1a;
     color: white;
 }
@@ -18,14 +19,9 @@
 .products-section {
     display: flex;
     flex-direction: column;
-    width: 100vh;
-
-    
 
     /* bg  */
-    background-color: #7fa8d659;
-
-
+    background-color: #EEF2FF;
 }
 
 .products {
@@ -33,7 +29,16 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: start;
-    width: 100%;
+    min-width: 82vw;
+    width: 90vw;
     height: 100%;
-    padding: 20px;
+    padding-left: 20px;
+}
+
+.products-header {
+    display: flex;
+    font-size: 25px;
+    margin-left: 30px;
+    margin-top: 10px;
+    align-items: center;
 }
