--- a/icesipalace-frontend/src/styles/Register/register.css
+++ b/icesipalace-frontend/src/styles/Register/register.css
@@ -1,116 +1,118 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap'); 
+@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+.Register {
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
 
-html {
     font-family: 'Nunito', sans-serif;
     font-size: 22px;
     color: #fff;
-}
-
-body {
     min-height: 100vh;
     background-color: dodgerblue;
-}
 
-.App {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh; 
-  padding: 1rem 0.5rem;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
-}
-
-section {
-    width: 100%;
-    max-width: 420px;
-    min-height: 400px;
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    padding: 1rem;
-    border-radius: 0.5rem;
-    background-color: rgba(0,0,0,0.4);
-}
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
 
-form {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    flex-grow: 1;
-    padding-bottom: 1rem;
-}
+    .App {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+        padding: 1rem 0.5rem;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
 
-a, a:visited {
-    color: #fff;
-}
+    section {
+        width: 100%;
+        max-width: 420px;
+        min-height: 400px;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        padding: 1rem;
+        border-radius: 0.5rem;
+        background-color: rgba(0, 0, 0, 0.4);
+    }
 
-input[type="text"],
-input[type="password"],
-button,
-textarea {
-  font-family: 'Nunito', sans-serif;
-  font-size: 22px;
-  padding: 0.25rem;
-  border-radius: 0.5rem;
-}
+    form {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        flex-grow: 1;
+        padding-bottom: 1rem;
+    }
 
-label,
-button {
-  margin-top: 1rem;
-}
+    a,
+    a:visited {
+        color: #fff;
+    }
 
-button {
-  padding: 0.5rem;
-}
+    input[type="text"],
+    input[type="password"],
+    button,
+    textarea {
+        font-family: 'Nunito', sans-serif;
+        font-size: 22px;
+        padding: 0.25rem;
+        border-radius: 0.5rem;
+    }
 
-.instructions {
-    font-size: 0.75rem;
-    border-radius: 0.5rem;
-    background: #000;
-    color: #fff;
-    padding: 0.25rem;
-    position: relative;
-    bottom: -10px;
-}
+    label,
+    button {
+        margin-top: 1rem;
+    }
 
-.instructions > svg {
-    margin-right: 0.25rem;
-}
+    button {
+        padding: 0.5rem;
+    }
 
-.offscreen {
-    position: absolute;
-    left: -9999px;
-}
+    .instructions {
+        font-size: 0.75rem;
+        border-radius: 0.5rem;
+        background: #000;
+        color: #fff;
+        padding: 0.25rem;
+        position: relative;
+        bottom: -10px;
+    }
 
-.hide {
-    display: none;
-}
+    .instructions > svg {
+        margin-right: 0.25rem;
+    }
 
-.valid {
-    color: limegreen;
-    margin-left: 0.25rem;
-}
+    .offscreen {
+        position: absolute;
+        left: -9999px;
+    }
 
-.invalid {
-    color: red;
-    margin-left: 0.25rem;
-}
+    .hide {
+        display: none;
+    }
 
-.errmsg {
-    background-color: lightpink;
-    color: firebrick;
-    font-weight: bold;
-    padding: 0.5rem;
-    margin-bottom: 0.5rem;
-}
+    .valid {
+        color: limegreen;
+        margin-left: 0.25rem;
+    }
 
-.line {
-    display: inline-block;
+    .invalid {
+        color: red;
+        margin-left: 0.25rem;
+    }
+
+    .errmsg {
+        background-color: lightpink;
+        color: firebrick;
+        font-weight: bold;
+        padding: 0.5rem;
+        margin-bottom: 0.5rem;
+    }
+
+    .line {
+        display: inline-block;
+    }
 }
