--- a/icesipalace-frontend/src/styles/HomePage/HomePage.css
+++ b/icesipalace-frontend/src/styles/HomePage/HomePage.css
@@ -24,14 +24,18 @@
 
     /* box shadow */
     box-shadow: 0px 0px 70px rgba(0, 0, 0, 0.3);
+}
 
+.nav-bar-title {
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+    font-weight: 600;
 }
 
 .products-section {
     display: flex;
     flex-direction: column;
-
-    /* bg  */
 }
 
 .products {
