--- a/icesipalace-frontend/src/styles/HomePage/LeftSideNav.css
+++ b/icesipalace-frontend/src/styles/HomePage/LeftSideNav.css
@@ -14,29 +14,37 @@
     margin-top: 20px;
 }
 
-.user-image{
+.user-image {
     border-radius: 50%;
     width: 50px;
     height: auto;
-    margin : 0 5px 0 10px;
+    margin: 0 5px 0 10px;
 }
 
-.user-title{
-   display: inline;
-   color: black;
-   font: 200;
-   font-size: larger; 
+.user-title {
+    display: inline;
+    color: black;
+    font: 200;
+    font-size: larger;
 }
 
-.user-title:hover{
+.user-title:hover {
     color: black;
 }
 
-.input{
+.input {
     width: 100%;
     height: 30px;
     border-radius: 5px;
     border: 1px solid #ccc;
     padding: 5px;
     margin: 20px 0 0 0;
+    border: 3px solid #000;
+}
+
+hr {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    border: 0;
+    border-top: 4px solid rgba(0, 28, 33);
 }
