--- a/icesipalace-frontend/src/styles/Register/register.css
+++ b/icesipalace-frontend/src/styles/Register/register.css
@@ -40,14 +40,11 @@
     textarea {
         padding: 0.25rem;
         border-radius: 0.5rem;
+        margin-bottom: 1.5rem
     }
 
-    label,
     button {
         margin-top: 1rem;
-    }
-
-    button {
         padding: 0.5rem;
     }
 
