--- a/icesipalace-frontend/src/styles/HomePage/HomePage.css
+++ b/icesipalace-frontend/src/styles/HomePage/HomePage.css
@@ -11,7 +11,7 @@
     display: flex;
     flex-direction: column;
     
-    width: 250px;
+    width: 21em;
     min-height: auto;
     padding: 5px;
 
@@ -20,7 +20,7 @@
     border-radius: 0px 10px 10px 0px;
     
     /* bg gradient */
-    background: linear-gradient(180deg, var(--zircon-800) 0%, var(--zircon-900) 100%);
+    background: linear-gradient(180deg, var(--zircon-600) 0%, var(--zircon-700) 100%);
 
     /* box shadow */
     box-shadow: 0px 0px 70px rgba(0, 0, 0, 0.3);
