changed the left part style

--- a/icesipalace-frontend/src/styles/HomePage/LeftSideNav.css
+++ b/icesipalace-frontend/src/styles/HomePage/LeftSideNav.css
@@ -1,10 +1,25 @@
-.main-container {
+.nav-bar {
     display: flex;
+    flex-direction: column;
+    
+    width: 21em;
+    height: 100%;
+    min-height: auto;
+    padding: 5px;
+
+    color: var(--zircon-50);
+
+    border-radius: 0px 10px 10px 0px;
+    
+    /* bg gradient */
+    background: linear-gradient(180deg, var(--zircon-600) 0%, var(--zircon-700) 100%);
+
+    /* box shadow */
+    box-shadow: 0px 0px 70px rgba(0, 0, 0, 0.3);
 }
 
 .nav-bar-title {
-    align-items: center;
-    justify-content: center;
+    text-align: center;
     font-size: 30px;
     font-weight: 400;
 }
@@ -33,12 +48,10 @@
 }
 
 .input {
-    width: 100%;
+    width: 80%;
     height: 30px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
     padding: 5px;
-    margin: 20px 0 0 0;
+    margin: 20px 0 0 5px;
     border: 3px solid #000;
 }
 
