--- a/icesipalace-frontend/src/styles/HomePage/LeftSideNav.css
+++ b/icesipalace-frontend/src/styles/HomePage/LeftSideNav.css
@@ -2,6 +2,23 @@
     display: flex;
 }
 
+.nav-bar {
+    display: flex;
+    flex-direction: column;
+    
+    width: 21em;
+    min-height: auto;
+    padding: 5px;
+
+    color: var(--zircon-50);
+
+    /* bg gradient */
+    background: linear-gradient(180deg, var(--zircon-600) 0%, var(--zircon-700) 100%);
+
+    /* box shadow */
+    box-shadow: 0px 0px 70px rgba(0, 0, 0, 0.3);
+}
+
 .nav-bar-title {
     align-items: center;
     justify-content: center;
