--- a/icesipalace-frontend/src/styles/HomePage/LeftSideNav.css
+++ b/icesipalace-frontend/src/styles/HomePage/LeftSideNav.css
@@ -2,34 +2,14 @@
     display: flex;
     flex-direction: column;
     
-    width: 21em;
-    height: 100%;
-    min-height: auto;
-    padding: 5px;
-
-    color: var(--zircon-50);
-
-    border-radius: 0px 10px 10px 0px;
-    
-    /* bg gradient */
-    background: linear-gradient(180deg, var(--zircon-600) 0%, var(--zircon-700) 100%);
-
-    /* box shadow */
-    box-shadow: 0px 0px 70px rgba(0, 0, 0, 0.3);
-}
-
-.nav-bar {
-    display: flex;
-    flex-direction: column;
-    
-    width: 21em;
-    min-height: auto;
+    width: 18em;
+    min-height: 100vh;
     padding: 5px;
 
     color: var(--zircon-50);
 
     /* bg gradient */
-    background: linear-gradient(180deg, var(--zircon-600) 0%, var(--zircon-700) 100%);
+    background: linear-gradient(180deg, var(--zircon-500) 0%, var(--zircon-600) 100%);
 
     /* box shadow */
     box-shadow: 0px 0px 70px rgba(0, 0, 0, 0.3);
@@ -39,6 +19,11 @@
     text-align: center;
     font-size: 30px;
     font-weight: 400;
+}
+
+.nav-bar-subtitle {
+    text-align: left;
+    font-size: 20px;
 }
 
 
@@ -64,12 +49,28 @@
     color: black;
 }
 
-.input {
-    width: 80%;
-    height: 30px;
-    padding: 5px;
-    margin: 20px 0 0 5px;
-    border: 3px solid #000;
+.search-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    input {
+        width: 90%;
+        height: 35px;
+        border-radius: 5px;
+        border: none;
+        padding: 5px;
+        margin: 5px 0 5px 0;
+
+        background-color: var(--zircon-50);
+
+        font-size: 15px;
+
+        &:focus {
+            outline: none;
+        }
+    }
 }
 
 hr {
