--- a/icesipalace-frontend/src/styles/HomePage/LeftSideNav.css
+++ b/icesipalace-frontend/src/styles/HomePage/LeftSideNav.css
@@ -19,7 +19,7 @@
 .nav-bar-title {
     text-align: center;
     font-size: 30px;
-    font-weight: 400;
+    font-weight:700;
 }
 
 .nav-bar-subtitle {
@@ -34,7 +34,7 @@
 
 .user-image {
     border-radius: 50%;
-    width: 50px;
+    width: 35px;
     height: auto;
     margin: 0 5px 0 10px;
 }
@@ -91,3 +91,18 @@ hr {
     align-items: flex-end;
 }
 
+.btn-create-product {
+    padding: 5px 10px 5px 10px;
+    border-radius: 5px;
+    border: none;
+    background-color: var(--zircon-50);
+    color: var(--zircon-950);
+    font-size: 15px;
+    font-weight: 500;
+    cursor: pointer;
+    width: 90%;
+
+    &:hover {
+        background-color: var(--zircon-100);
+    }
+}
