--- a/icesipalace-frontend/src/styles/Product/ProductExpanded.css
+++ b/icesipalace-frontend/src/styles/Product/ProductExpanded.css
@@ -15,7 +15,10 @@
     padding: 32px;
     width: 100%;
     max-width: 640px;
+
     background-color: var(--zircon-50);
+    border-radius: 10px;
+    box-shadow: 0px 0px 70px rgba(0, 0, 0, 0.3);
 
 }
 
